<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="41dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="monospace"
                android:text="@string/instructions_text"
                android:textAlignment="center"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/text_box_Name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/text_box_Adjective"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/text_box_Verb"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/text_box_Silly_Word"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/text_box_Noun"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/text_box_Noun_plural"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName7"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName7"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ems="10"
                android:hint="@string/text_box_Verb_endingInED"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName9"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName9"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName9"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/text_box_Noun3"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName8"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName8"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/text_box_Noun2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName10"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName10"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName10"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName9" />

            <EditText
                android:id="@+id/editTextTextPersonName10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="@string/text_box_Verb_endingInED2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName11"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName11"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName11"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />

            <EditText
                android:id="@+id/editTextTextPersonName11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/text_box_Adjective2"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName10" />

            <Button
                android:id="@+id/button"
                android:layout_width="229dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="72dp"
                android:onClick="sendMessage"
                android:text="@string/finished_button"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName11" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>