<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MadLibActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:text="@string/prompt_1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/name_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_2"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/adjective_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_3"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Verb_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_4"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/sillyWord_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_5"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/noun_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_6"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nounPlural_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_8"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/verbED_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_9"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/noun2_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_11"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/noun3_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_12"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/verbED2_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_13"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/adjective2_textbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/prompt_14"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>